--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Monoton&family=Titillium+Web:wght@200;400;700&display=swap" rel="stylesheet"> 
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <main class="mars-current-weather">
+        <h2 class="main-title-2">join us on</h2>
+        <h1 class="main-title-1">MARS</h1>
+
+        <div class="date">
+            <h2 class="section-title">Sol 269</h2>
+            <p class="date__day">September 21</p>
+        </div>
+        <div class="temp">
+            <h2 class="section-title"></h2>
+            <p class="reading">High: -20</p>
+            <p class="reading">Low: -120</p>
+        </div>
+        <div class="wind">
+            <h2 class="section-title"></h2>
+            <p class="reading">75 km/h</p>
+
+            <div class="wind__direction">
+                <p class="sr-only ">45deg</p>
+                <div class="wind__arrow"></div>
+            </div>
+        </div>
+
+        
+    </main>
+    <div class="forecast"></div>
 </body>
 </html>
