--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Monoton&family=Titillium+Web:wght@200;400;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="./css/main.css">
-    <title>Document</title>
+    <title>Colonise Mars</title>
 </head>
 <body>
     <h2 class="main-title-2">join us on</h2>
