--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
     </main>
 
     <div class="previous-weather">
-        <label for="weather-togle" class="show-previous-weather-label" &#8593;>
+        <label for="weather-togle" class="show-previous-weather-label">
+            &#8593;
             <span class="sr-only">Show previous weather</span>
         </label>
 
@@ -60,6 +61,48 @@
         <h2 class="main-title">Previous 7 days</h2>
     
         <div class="previous-days">
+            <div class="previous-day">
+                <h3 class="previous-day__sol">Sol 262</h3>
+                <p class="previous-day__date">September 14</p>
+                <p class="previous-day__temp">High: -20</p>
+                <p class="previous-day__temp">Low: -120</p>
+                <button class="previous-day__more-info">more info</button>
+            </div>
+            <div class="previous-day">
+                <h3 class="previous-day__sol">Sol 262</h3>
+                <p class="previous-day__date">September 14</p>
+                <p class="previous-day__temp">High: -20</p>
+                <p class="previous-day__temp">Low: -120</p>
+                <button class="previous-day__more-info">more info</button>
+            </div>
+            <div class="previous-day">
+                <h3 class="previous-day__sol">Sol 262</h3>
+                <p class="previous-day__date">September 14</p>
+                <p class="previous-day__temp">High: -20</p>
+                <p class="previous-day__temp">Low: -120</p>
+                <button class="previous-day__more-info">more info</button>
+            </div>
+            <div class="previous-day">
+                <h3 class="previous-day__sol">Sol 262</h3>
+                <p class="previous-day__date">September 14</p>
+                <p class="previous-day__temp">High: -20</p>
+                <p class="previous-day__temp">Low: -120</p>
+                <button class="previous-day__more-info">more info</button>
+            </div>
+            <div class="previous-day">
+                <h3 class="previous-day__sol">Sol 262</h3>
+                <p class="previous-day__date">September 14</p>
+                <p class="previous-day__temp">High: -20</p>
+                <p class="previous-day__temp">Low: -120</p>
+                <button class="previous-day__more-info">more info</button>
+            </div>
+            <div class="previous-day">
+                <h3 class="previous-day__sol">Sol 262</h3>
+                <p class="previous-day__date">September 14</p>
+                <p class="previous-day__temp">High: -20</p>
+                <p class="previous-day__temp">Low: -120</p>
+                <button class="previous-day__more-info">more info</button>
+            </div>
             <div class="previous-day">
                 <h3 class="previous-day__sol">Sol 262</h3>
                 <p class="previous-day__date">September 14</p>
